<resources>
    <string name="app_name">MHW Board Game Character Sheets</string>
    <string name="player_name_placeholder">Player Name</string>
    <string name="character_name_placeholder">Character Name</string>
    <string name="game_name_placeholder">Game Name</string>
    <string name="palico_name_placeholder">Palico Name</string>
    <string name="weapon_type_placeholder">Weapon Type</string>
    <string name="weapon_armor_name_placeholder">Weapon/Armor Name</string>
    <string name="material_name_placeholder">Material Name</string>
    <string name="material_quantity">0</string>
    <string name="character_name_label">Character Name</string>

    <string-array name="potion_number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="day_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

<!--    Weapon Types-->
    <string-array name="weapon_types">
        <item>Bow</item>
        <item>Charge Blade</item>
        <item>Dual Blades</item>
        <item>Great Sword</item>
        <item>Gunlance</item>
        <item>Hammer</item>
        <item>Heavy Bow Gun</item>
        <item>Hunting Horn</item>
        <item>Insect Glaive</item>
        <item>Lance</item>
        <item>Light Bow Gun</item>
        <item>Long Sword</item>
        <item>Switch Axe</item>
        <item>Sword &amp; Shield</item>
    </string-array>

<!--    Bow Names-->
    <string-array name="bow_names">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>

    </string-array>




</resources>