<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/list_item_width"
    android:layout_height="@dimen/list_item_height"
    android:backgroundTint="@color/accent_button_colour"
    android:backgroundTintMode="src_atop">

    <FrameLayout
        android:id="@+id/Character_List_Item_Frame_Layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:background="@drawable/layout_border_unchecked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Player_Name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="top"
            android:text="@string/player_name_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Character_Name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="bottom"
            android:text="@string/character_name_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Campaign_Name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="top|right"
            android:text="@string/game_name_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Palico_Name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="bottom|right"
            android:text="@string/palico_name_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Weapon_Type_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:text="@string/weapon_type_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>